--- a/styles.css
+++ b/styles.css
@@ -294,18 +294,12 @@ footer {
 
 /*KREUZBERG - PHOTO SLIDER*/
 
-/* .carousel {
-   margin: 0 auto;
-  width: 80%;
-  height: 600px;
-  position: relative;
-} */
 .carousel-track-container {
   /* background: lightcoral; */
   margin: 0 auto;
-  width: 80%;
+  width: 60%;
   position: relative;
-  height: 600px;
+  height: 64rem;
   position: relative;
 }
 
@@ -318,17 +312,6 @@ footer {
   left: 0;
 }
 
-/* .carousel-track {
-  position: relative;
-  display: flex;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  width: 100%;
-  height: 100%;
-  transition: transform 600ms ease-in;
-} */
-
 .carousel-track-container img:first-child {
   z-index: 1;
 }
@@ -336,36 +319,6 @@ footer {
 .carousel-track-container img:nth-child(2) {
   z-index: 0;
 }
-
-/* .carousel-slide {
-  width: 100%;
-  height: 100%;
-  top: 0;
-  bottom: 0;
-  position: absolute;
-} */
-
-/* .carousel-button {
-  background: transparent;
-  border: 0;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  cursor: pointer;
-  display: flex;
-}
-
-.carousel-button--left {
-  left: -50px;
-}
-
-.carousel-button--right {
-  right: -50px;
-} */
-
-/* .slider-nav-icon {
-  font-size: 32px;
-} */
 
 .carousel-nav {
   padding: 3rem;
@@ -382,6 +335,7 @@ footer {
   background: rgba(127, 127, 127, 0.697);
   margin: 0 1.2rem;
   cursor: pointer;
+  transition: all 0.1s;
 }
 
 .carousel-nav-btn.current-dot {
